File Name: CHANGES

07/19/2015 FASP 1.7.5:
- Fix a bug: a memory problem in AMG for BSR format.
- Fix a few typos in pcg.
- Fix undefined Doxygen function.
- Update release version compiler options in Makefile.
- Revert test/ini/input.dat.
- Update website and documentation.
- Update regression test results using GCC 4.9.2.

06/14/2015 FASP 1.7.4:
- Test very small tolerance: machine eps.
- Test on OS X 10.10.3 with GCC 4.9.2: works fine.
- Fix convergence problem in regression test when using DIAG_PERF.
- Update the regression test results. 
- Modify cmake Doxygen output: If not present, does not print warning.
- Update README. 
- Update the web, documentation, etc.

05/10/2015 FASP 1.7.3:
- Fix a bug: cmake does not recognize CC env variable sometimes.
- Fix a bug: ILU static memory allocation causes seg fault for large problems.
- Fix a bug: ILU "implicit none" missing.
- Fix warnings: except unused functions and unused labels.
- Fix a bug: array out of bound in GMG 2D case.
- Fix memory leakage in base/src/coarsening_rs.c.
- Fix memory leakage in base/src/pgcr.c.
- Clean up pvfgmres for stopping types.
- Add stopping types to pvfgmres.

04/26/2015 FASP 1.7.2:
- Fix a bug: Output of Krylov methods with saft-net.
- Move the NaN checking so that Fortran NaN runtime exception does not appear.
- Remove some unwanted test code.
- Fix a bug: ILU setup memory allocation size is not right.
- Fix a bug: Change ILU static memory to dynamic allocation.
- Change MUMPS search directory.
- Change back default setting: Not using MUMPS.
- Update documentation and website. 

04/13/2015 FASP 1.7.1:
- Fix a bug: Add a lower bound for quality_bound.
- Fix a bug: Invert small dense matrices with zero diagonal entries.
- Fix a problem with the web version: missing Doxygen setting file.
- Update the webpage and documentation.
- Add Guass elmination with pivoting.
- Update regression test results.
- Revise TODO list.

03/24/2015 FASP 1.7.0: